# shengji-tractor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile.compute  Dockerfile.compute.dockerignore  Dockerfile.deploy  NOTICE  PROGRESS.md  README.md  SECURITY_NOTES.md  fly.compute.toml  fly.toml  release.sh  rust-toolchain.toml  vercel.json
.github/: dependabot.yml
backend/: Cargo.toml
backend/backend-types/: Cargo.toml
backend/src/: lib.rs  main.rs  security.rs  shengji_handler.rs  utils.rs
backend/tests/: e2e_game.rs
core/: Cargo.toml
core/examples/: budget_benchmark.rs  crossplay_eval.rs  decision_metrics.rs  easy_ab_benchmark.rs  enoch_benchmark.rs  eval.rs  expert_ab.rs  gen_belief_data.rs  gen_dmc_data.rs  gen_exit_data.rs  gen_phase_training_data.rs  gen_training_data.rs  gm_benchmark.rs  heuristic_benchmark.rs  kitty_audit.rs  model_control_eval.rs  oracle_belief_sweep.rs  oracle_eval.rs  paired_eval.rs  refinement_search_ab.rs  tournament.rs  trace_delta.rs  validate_belief_model.rs  validate_expert_model.rs  validate_phase_model.rs  variant_eval.rs  version_ab.rs
core/src/: interactive.rs  lib.rs  message.rs  settings.rs
core/src/bot/: belief.rs  determinize.rs  endgame.rs  expert.rs  expert_model.onnx  expert_model.onnx.manifest.json  expert_model_old.onnx  harness.rs  heuristics.rs  mod.rs  phase.rs  policy.rs  search.rs  tests.rs
core/src/game_state/: draw_phase.rs  exchange_phase.rs  mod.rs  play_phase.rs
core/tests/: baseline_gate.rs
docs/: action-value-training.md  bot-eval-baseline.md  bot-overhaul-2026-06-30.md  bot-superplay-plan.md  bot-superplay-results.md  bot-training-roadmap.md  code-audit-2026-06-29.md  expert-iteration-training.md  grandmaster-and-value-head-findings.md
frontend/: package.json  tsconfig.json  webpack.config.js
scripts/: vercel-build.sh
training/: .gitignore  README.md  cloud_setup.sh  expert_iteration.example.json  expert_iteration.py  model_ab.py  offline_replays.example.json  pipeline_contracts.py  prepare_expert_data.py  requirements.lock.txt  requirements.txt  run_all_cloud.sh  run_athena_only.sh  run_dmc_pilot.sh  run_dmc_pipeline.sh  run_exit_pipeline.sh  run_model_ab.sh  run_targeted.sh  run_value_pipeline.sh  test_expert_iteration.py  test_training_contracts.py  train_belief.py  train_dmc.py  train_expert.py  train_phase.py
(+78 files in other folders)
