[package]
name = "shengji"
version = "0.1.5-beta.25"
authors = ["Shengji Online contributors"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dynamic = ["slog-term"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["ws", "headers"] }
ctrlc = { version = "3", features = ["termination"] }
futures = { version = "0.3" }
http = "0.2"
include_dir = "0.7"
lazy_static = "1.4.0"
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shengji-core = { path = "../core" }
shengji-mechanics = { path = "../mechanics" }
shengji-types = { path = "./backend-types" }
slog = "2.5"
wasm-rpc-impl = { path = "../wasm-rpc-impl" }
slog-async = "2.5"
slog-bunyan = "2.2"
slog-term = { version = "2.5", optional = true }
storage = { path = "../storage" }
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
    "io-util",
] }
tower-http = { version = "0.4", features = ["fs", "cors", "set-header"] }
zstd = "0.12"

[dev-dependencies]
axum-test = "13.0"
tower = { version = "0.5", features = ["util"] }
# WebSocket client for the end-to-end integration test (`tests/e2e_game.rs`).
# axum-test 13 has no WS support, so the test binds a real TcpListener and
# drives the server over an actual WebSocket. Pinned to the version already in
# Cargo.lock (a transitive axum dep) so `cargo test --locked` resolves cleanly.
tokio-tungstenite = "0.20"
